--- a/priv/notes.html
+++ b/priv/notes.html
@@ -6,7 +6,7 @@
 		<meta http-equiv="content-type" content="text/html; charset=utf-8"/>
 
 		<link href="css/application.css" rel="stylesheet" type="text/css"/>
-		<script src="https://code.jquery.com/jquery-1.12.4.js" type="text/javascript"></script>
+		<script src="https://code.jquery.com/jquery-1.2.6.min.js" type="text/javascript"></script>
 		<script src="js/jquery-ui-personalized-1.6rc2.min.js" type="text/javascript"></script>
 		<script src="js/pure.js" type="text/javascript"></script>
 		<script src="js/application.js" type="text/javascript"></script>
